deploy/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deploy
  labels:
    app: deploy-auth
spec:
  replicas: 1
  se
