deploy/gpt-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-blockchaingpt

spec:
  selector:
    app: deploy-blockchaingpt
  ports:
  - targetPort: 3040
    port
