deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-chatgpttest
  namespace: chatgpttest
  annotations:


    cert-manager.io/cluster-issuer: letsencrypt-chatgpttest


spec:
